--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -10,8 +10,25 @@
     android:orientation="vertical"
     tools:context="com.ayushmaharjan.learning.experiments.MainActivity">
 
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/sign_in_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:text="Sign Out"
+        android:id="@+id/sign_out_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:text="Revoke"
+        android:id="@+id/revoke_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <TextView
-        android:text="@string/app_name"
+        android:id="@+id/status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 </LinearLayout>
